--- a/indiaos/templates/conference.html
+++ b/indiaos/templates/conference.html
@@ -79,6 +79,7 @@
 	</div>
 	<!-- csrf_token -->
 	<script type="text/javascript" src="/assets/frappe/js/lib/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/assets/frappe/js/lib/socket.io.min.js"></script>
 	<script type="text/javascript" src="/assets/js/frappe-web.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap-4-web.min.js"></script>
 	{%- for link in web_include_js %}
