--- a/indiaos/templates/includes/modal.html
+++ b/indiaos/templates/includes/modal.html
@@ -14,23 +14,35 @@
 				</div>
 			</div>
 			<!--Body-->
-			<form id="register-form" class="my-5">
-				<div class="mb-4">
-					<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">Name</label>
-					<input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="name" type="text" placeholder="Jane Doe" required="True">
-					<p id="error-name" class="text-xs text-red-500 mt-2 hidden">This field is required</p>
+			<div id="form-modal">
+				<form id="register-form" class="my-5">
+					<div class="mb-4">
+						<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">Name</label>
+						<input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="name" type="text" placeholder="Jane Doe" required="True">
+						<p id="error-name" class="text-xs text-red-500 mt-2 hidden">This field is required</p>
+					</div>
+					<div class="mb-4">
+						<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">E-mail</label>
+						<input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="email" type="email" placeholder="jane@example.com" required="True">
+						<p id="error-email" class="text-xs text-red-500 mt-2 hidden">Please enter a valid email</p>
+					</div>
+					<div class="mb-6">
+						<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">Organization You Represent</label>
+						<input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="organization" type="text" placeholder="Cool Stuff Inc.">
+						<p id="error-organization" class="text-xs text-red-500 mt-2 hidden">This field is required</p>
+					</div>
+				</form>
+				<!--Footer-->
+				<div id="actions" class="flex justify-end pt-5">
+					<button href="#responsive-header" class="font-mono font-base font-mono no-underline text-grey-darkest mr-3 bg-gray-400 px-3 py-2 rounded border-gray-500 border-b-4 hover:border-gray-600 modal-close w-1/5">
+						Cancel
+					</button>
+					<button href="#responsive-header" class="font-mono font-base font-mono no-underline text-grey-darkest bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600 w-4/5" onclick="register()">
+						Pay ₹300<br>
+						<!-- <span class="text-xs">Register</span> -->
+					</button>
 				</div>
-				<div class="mb-4">
-					<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">E-mail</label>
-					<input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="email" type="email" placeholder="jane@example.com" required="True">
-					<p id="error-email" class="text-xs text-red-500 mt-2 hidden">Please enter a valid email</p>
-				</div>
-				<div class="mb-6">
-					<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">Organization You Represent</label>
-					<input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white" id="organization" type="text" placeholder="Cool Stuff Inc.">
-					<p id="error-organization" class="text-xs text-red-500 mt-2 hidden">This field is required</p>
-				</div>
-			</form>
+			</div>
 
 			<div id="success" class="py-20 md:py-5">
 				<div class="success-checkmark">
@@ -42,22 +54,24 @@
 					</div>
 				</div>
 				<div class="text-center">You have successfully registered for IndiaOS. </div>
-				<!-- <div class="text-center text-gray-600">P.S. We sent an email with the ticket attached.</div> -->
+				<div class="text-center text-gray-600">P.S. We sent an email with the ticket attached.</div>
 			</div>
 
 			<div id="already-registered" class="py-12 md:py-5">
-				<img id="emoji" class="mx-auto w-24 h-24 m-10 animated faster grow" src="/assets/indiaos/img/monocle.png"></img>
+				<img id="emoji-already-registered" class="mx-auto w-24 h-24 m-10 animated faster grow" src="/assets/indiaos/img/monocle.png"></img>
 				<div class="text-center">You have already registered for IndiaOS. We will send you a reminder 3 days before the conference.</div>
 				<!-- <div class="text-center text-gray-600">P.S. We sent an email with the ticket attached.</div> -->
 			</div>
-			<!--Footer-->
-			<div id="actions" class="flex justify-end pt-5">
-				<button href="#responsive-header" class="font-mono font-base font-mono no-underline text-grey-darkest mr-3 bg-gray-400 px-3 py-2 rounded border-gray-500 border-b-4 hover:border-gray-600 modal-close">
-					Cancel
-				</button>
-				<button href="#responsive-header" class="font-mono font-base font-mono no-underline text-grey-darkest bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600" onclick="register()">
-					Register Free
-				</button>
+
+			<div id="payment-failed" class="py-12 md:py-5">
+				<img id="emoji-payment-failed" class="mx-auto w-24 h-24 m-10 animated faster grow" src="/assets/indiaos/img/bandage.png"></img>
+				<div class="text-center">Looks like something went wrong.<br>You have nothing to worry about, just drop in an email at shivam@frappe.io</div>
+				<!-- <div class="text-center text-gray-600">P.S. We sent an email with the ticket attached.</div> -->
+			</div>
+
+			<div id="loading-payment" class="py-12 md:py-5 flex text-center">
+				<div class="lds-ripple inline-block"><div></div><div></div></div>
+				<div class="text-center">Loading the Payment Gateway</div>
 			</div>
 		</div>
 	</div>
@@ -67,6 +81,10 @@
 <script>
 	const modal = document.querySelector('.main-modal');
 	const closeButton = document.querySelectorAll('.modal-close');
+	const pages = ['form-modal', 'success', 'already-registered', 'loading-payment', 'payment-failed']
+
+	let token = Math.random().toString(36).substr(2) + Math.random().toString(36).substr(2);
+	// let token = "123456";
 
 	const modalClose = () => {
 		modal.classList.remove('fadeIn');
@@ -75,21 +93,6 @@
 			modal.style.display = 'none';
 			resetModal();
 		}, 500);
-	}
-
-	function resetModal() {
-		hide('success')
-		hide('already-registered')
-		show('register-form')
-		show('actions', 'flex')
-		document.getElementById('modal-title').innerHTML = "Register"
-	}
-
-	const openModal = () => {
-		resetModal()
-		modal.classList.remove('fadeOut');
-		modal.classList.add('fadeIn');
-		modal.style.display = 'flex';
 	}
 
 	for (let i = 0; i < closeButton.length; i++) {
@@ -101,36 +104,58 @@
 		}
 	}
 
-	function hide(id) {
-		document.getElementById(id).style.display = "none";
+	function setTitle(title) {
+		document.getElementById('modal-title').innerHTML = title;
+	}
+
+	function setPage(id) {
+		pages.forEach(page => {
+			document.getElementById(page).style.display = "none"
+		})	
+		document.getElementById(id).style.display = "block";
 	}
 
 	function show(id, display="block") {
 		document.getElementById(id).style.display = display;
 	}
 
+	function resetModal() {
+		setPage('form-modal');
+		setTitle("Register");
+	}
+
+	// Page Switching Functions
+
+	const openModal = () => {
+		resetModal();
+		modal.classList.remove('fadeOut');
+		modal.classList.add('fadeIn');
+		modal.style.display = 'flex';
+	}
+
 	function success() {
-		show('success')
-		hide('already-registered')
-		hide('register-form')
-		hide('actions')
-		hide('check-icon')
-		document.getElementById('modal-title').innerHTML = "Yayy 🎉"
-		setTimeout(function () {
-			show('check-icon')
-		}, 10);
+		setPage('success')
+		setTitle("Yayy 🎉");
+		window.addEventListener("focus", function(event) { 
+			setTimeout(function () {
+				show('check-icon')
+			}, 10);
+		}, false);
+	}
+
+	function redirecting() {
+		setPage('loading-payment')
+		setTitle("Redirecting");
 	}
 
 	function fail(reason) {
-		show(reason)
-		hide('register-form')
-		hide('success')
-		hide('actions')
-		hide('emoji')
-		document.getElementById('modal-title').innerHTML = "Oops!"
-		setTimeout(function () {
-			show('emoji')
-		}, 10);
+		setPage(reason)
+		setTitle("Oops!");
+		window.addEventListener("focus", function(event) { 
+			setTimeout(function () {
+				show(`emoji-${reason}`)
+			}, 10);
+		}, false);
 	}
 
 	function register() {
@@ -151,16 +176,26 @@
 			let form = {}
 			inputs.forEach((id) => form[id] = document.getElementById(id).value)
 			form.event = "IndiaOS 2020"
+			form.token = token;
+			redirecting();
 			frappe.call('indiaos.indiaos.doctype.conference_participant.conference_participant.register', form).then(res => {
 				let msg = res.message
 				if (msg.status == 'success') {
-					success();
+					if (msg.redirect_to) {
+						window.open(msg.redirect_to, "_blank");
+					}
 					document.forms.namedItem('register-form').reset()
 				}
 				if (msg.status == 'failed') {
 					fail(msg.reason)
 					document.forms.namedItem('register-form').reset()
 				}
+			})
+			frappe.socketio.socket.on(token, (message) => {
+				console.log("SUCCEESSSS")
+				openModal();
+				if (message == 'success') success();
+				else fail('payment-failed');
 			})
 		}
 		else return
@@ -231,10 +266,6 @@
   }
 }
 
-/**
- * Extracted from: SweetAlert
- * Modified by: Istiak Tridip
- */
 .success-checkmark {
   width: 80px;
   height: 115px;
@@ -376,5 +407,38 @@
     top: 38px;
   }
 }
+
+.lds-ripple {
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #f6e05e;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1.5s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
+}
+
 </style>
 {% endblock %}
