feat: added speakers and why indiaos

--- a/indiaos/templates/conference.html
+++ b/indiaos/templates/conference.html
@@ -40,8 +40,8 @@
 
 	<!-- End of Meta Tags-->
 	<link href="/assets/css/indiaos.css" rel="stylesheet">
-	<!-- <link href="/assets/indiaos/css/tailwind.css" rel="stylesheet">
-	<link href="/assets/indiaos/css/custom.css" rel="stylesheet"> -->
+	<link href="/assets/indiaos/css/tailwind.css" rel="stylesheet">
+	<link href="/assets/indiaos/css/custom.css" rel="stylesheet">
 	<link rel="canonical" href="{{ frappe.utils.get_url() }}" />
 
 	<!-- favicons-->
