--- a/indiaos/public/css/builds/tailwind.css
+++ b/indiaos/public/css/builds/tailwind.css
@@ -75,7 +75,7 @@ a {
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 
-
+b,
 strong {
   font-weight: bolder;
 }
@@ -614,6 +614,10 @@ img {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: -webkit-box;
   display: flex;
@@ -696,6 +700,10 @@ img {
   height: 10rem;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .leading-tight {
   line-height: 1.25;
 }
@@ -734,6 +742,10 @@ img {
 
 .mr-0 {
   margin-right: 0;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-2 {
@@ -788,6 +800,10 @@ img {
   margin-right: 2rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -796,8 +812,16 @@ img {
   margin-top: 3rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .mb-24 {
   margin-bottom: 6rem;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
 }
 
 .focus\:outline-none:focus {
@@ -950,6 +974,10 @@ img {
   color: #ecc94b;
 }
 
+.text-blue-900 {
+  color: #2a4365;
+}
+
 .text-xs {
   font-size: 0.75rem;
 }
@@ -982,6 +1010,10 @@ img {
   text-transform: uppercase;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 .no-underline {
   text-decoration: none;
 }
@@ -1000,6 +1032,18 @@ img {
 
 .w-40 {
   width: 10rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-full {
@@ -1046,6 +1090,10 @@ img {
 
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:w-1\/4 {
+    width: 25%;
   }
 }
 
@@ -1113,16 +1161,16 @@ img {
     padding-top: 0;
   }
 
-  .lg\:pr-12 {
-    padding-right: 3rem;
-  }
-
   .lg\:w-auto {
     width: auto;
   }
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
   }
 
   .lg\:w-1\/5 {
