--- a/indiaos/templates/includes/navbar.html
+++ b/indiaos/templates/includes/navbar.html
@@ -10,8 +10,8 @@
 		</div>
 		<div id="menuBody" class="lg:flex flex-col lg:flex-row items-center text-bg w-full lg:pt-0 lg:w-auto hidden mt-5 lg:mt-0">
 			<div class="py-3 ml-2 lg:py-0 lg:ml-0 text-left">
-				<a href="#agenda" class="block font-base font-mono no-underline text-grey-darkest mr-0 lg:mr-8">
-					Agenda
+				<a href="/why-indiaos" class="block font-base font-mono no-underline text-grey-darkest mr-0 lg:mr-8">
+					Why IndiaOS ?
 				</a>
 			</div>
 			<div class="py-3 ml-2 lg:py-0 lg:ml-0 text-left">
