fix: permission issue

--- a/indiaos/templates/includes/modal.html
+++ b/indiaos/templates/includes/modal.html
@@ -78,6 +78,7 @@
 </div>
 
 {% block script %}
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
 	const modal = document.querySelector('.main-modal');
 	const closeButton = document.querySelectorAll('.modal-close');
