feat: show payment button

--- a/indiaos/templates/includes/navbar.html
+++ b/indiaos/templates/includes/navbar.html
@@ -19,11 +19,11 @@
 					Propose a Talk
 				</a>
 			</div>
-			<!-- <div class="py-3 lg:py-0 text-left">
+			<div class="py-3 lg:py-0 text-left">
 				<button onclick="openModal()" href="#responsive-header" class="block font-base font-mono no-underline text-grey-darkest bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600">
 					Register
 				</button>
-			</div> -->
+			</div>
 		</div>
 	</nav>
 </div>
