feat: updated for new razorpay API

--- a/indiaos/templates/conference.html
+++ b/indiaos/templates/conference.html
@@ -82,6 +82,7 @@
 	<script type="text/javascript" src="/assets/frappe/js/lib/socket.io.min.js"></script>
 	<script type="text/javascript" src="/assets/js/frappe-web.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap-4-web.min.js"></script>
+	<script type="text/javascript" src="/assets/js/checkout.min.js"></script>
 	{%- for link in web_include_js %}
 	<script type="text/javascript" src="{{ link | abs_url }}"></script>
 	{%- endfor -%}
