fix: footer layout

--- a/indiaos/templates/includes/footer.html
+++ b/indiaos/templates/includes/footer.html
@@ -1,15 +1,17 @@
 <section class="container mx-auto mb-24">
-	<p class="text-center mt-2 uppercase tracking-widest text-sm mt-12 text-gray-700">Organized and Hosted by the folks at</p>
+	<div class="flex justify-between mr-2 md:mx-24 lg:mx-48 mt-12 flex-col md:flex-row">
+		<a href="/code-of-conduct" class="uppercase mt-4 text-center text-sm text-gray-500">Code of Conduct</a>
+		<a href="javascript:openModal()" class="uppercase mt-4 text-center text-sm text-gray-500">Register</a>
+		<a href="/propose-a-talk" class="uppercase mt-4 text-center text-sm text-gray-500">Propose a Talk</a>
+		<a href="mailto:shivam@frappe.io"class="uppercase mt-4 text-center text-sm text-gray-500">Contact Us</a>
+	</div>
+	
+	<p class="text-center mt-5 uppercase tracking-widest text-sm text-gray-700">Organized and Hosted by the folks at</p>
+	
 	<div class="flex flex-row justify-center content-center mx-auto mt-8">
-	  <a href="https://www.zerodha.com"><img class="h-10 mr-4 tilt-left" src="/assets/indiaos/img/logos/zerodha.svg" alt="Zerodha Logo"></a>
-	  <p class="text-xl text-gray-700 self-center"> & </p>
-	  <a href="https://www.frappe.io"><img class="h-10 ml-4 tilt-right" src="/assets/indiaos/img/logos/frappe.svg" alt="Frappe Logo"></a>
-	 </div>
-	 	<div class="flex justify-between mr-2 md:mx-24 lg:mx-48 mt-12 flex-col md:flex-row">
-	 	<a href="/code-of-conduct" class="uppercase mt-4 text-center text-sm text-gray-500">Code of Conduct</a>
-	 	<a href="javascript:openModal()" class="uppercase mt-4 text-center text-sm text-gray-500">Register</a>
-	 	<a href="/propose-a-talk" class="uppercase mt-4 text-center text-sm text-gray-500">Propose a Talk</a>
-	 	<a href="mailto:shivam@frappe.io"class="uppercase mt-4 text-center text-sm text-gray-500">Contact Us</a>
-	 </div>
-	 <!-- <p class="text-center mt-8 tracking-widest text-sm mt-12 text-gray-700">© 2019 Frappe Technologies Pvt. Ltd. All rights reserved.</p> -->
+		<a href="https://www.zerodha.com"><img class="h-10 mr-4 tilt-left" src="/assets/indiaos/img/logos/zerodha.svg" alt="Zerodha Logo"></a>
+		<p class="text-xl text-gray-700 self-center"> & </p>
+		<a href="https://www.frappe.io"><img class="h-10 ml-4 tilt-right" src="/assets/indiaos/img/logos/frappe.svg" alt="Frappe Logo"></a>
+	</div>
+	<!-- <p class="text-center mt-8 tracking-widest text-sm mt-12 text-gray-700">© 2019 Frappe Technologies Pvt. Ltd. All rights reserved.</p> -->
 </section>
