--- a/indiaos/templates/conference.html
+++ b/indiaos/templates/conference.html
@@ -24,6 +24,7 @@
 	<meta name="twitter:title" content="IndiaOS - 2020">
 	<meta name="twitter:description" content="IndiaOS 2020.">
 	<meta name="twitter:creator" content="@indiaos">
+	<meta name="twitter:card" content="summary_large_image">
 
 	<!-- Twitter summary card with large image must be at least 280x150px -->
 	<meta name="twitter:image:src" content="{{ frappe.utils.get_url() }}/assets/indiaos/img/social/banner.png">
@@ -40,8 +41,8 @@
 
 	<!-- End of Meta Tags-->
 	<link href="/assets/css/indiaos.css" rel="stylesheet">
-	<link href="/assets/indiaos/css/tailwind.css" rel="stylesheet">
-	<link href="/assets/indiaos/css/custom.css" rel="stylesheet">
+	<!-- <link href="/assets/indiaos/css/tailwind.css" rel="stylesheet"> -->
+	<!-- <link href="/assets/indiaos/css/custom.css" rel="stylesheet"> -->
 	<link rel="canonical" href="{{ frappe.utils.get_url() }}" />
 
 	<!-- favicons-->
