--- a/indiaos/templates/includes/modal.html
+++ b/indiaos/templates/includes/modal.html
@@ -161,7 +161,7 @@
 		var options = {
 			"name": "IndiaOS",
 			"description": "Conference Ticket",
-			"image": "http://indiaos.in/assets/indiaos/img/icons/favicon.ico",
+			"image": "https://indiaos.in/assets/indiaos/img/indiaos.png",
 			"prefill": {
 				"name": ticket.full_name,
 				"email": ticket.email,
