feat: move modal css to custom.css

--- a/indiaos/public/css/custom.css
+++ b/indiaos/public/css/custom.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500,600,700&display=swap');
-html { font-family: 'IBM Plex Sans', sans-serif; }
+
+html {
+	font-family: 'IBM Plex Sans', sans-serif;
+}
 
 html body {
 	background-size: 32px 32px;
@@ -46,4 +49,273 @@ html body {
 
 .tilt-right:hover {
 	transform: rotate(10deg)
+}
+
+.animated {
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+.animated.faster {
+	-webkit-animation-duration: 500ms;
+	animation-duration: 500ms;
+}
+
+.animated.fastest {
+	-webkit-animation-duration: 350ms;
+	animation-duration: 350ms;
+}
+
+.fadeIn {
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+}
+
+.fadeOut {
+	-webkit-animation-name: fadeOut;
+	animation-name: fadeOut;
+}
+
+@keyframes fadeIn {
+	from {
+		bottom: -100%;
+	}
+
+	to {
+		bottom: 0%;
+	}
+
+}
+
+@keyframes fadeOut {
+	from {
+		bottom: 0%;
+	}
+
+	to {
+		bottom: -200%;
+	}
+
+}
+
+.grow {
+	-webkit-animation-name: grow;
+	animation-name: grow;
+}
+
+@keyframes grow {
+	from {
+		transform: scale(0);
+	}
+
+	to {
+		transform: scale(1);
+	}
+
+}
+
+.success-checkmark {
+	width: 80px;
+	height: 115px;
+	margin: 0 auto;
+}
+
+.success-checkmark .check-icon {
+	width: 80px;
+	height: 80px;
+	position: relative;
+	border-radius: 50%;
+	box-sizing: content-box;
+	border: 4px solid #f6e05e;
+}
+
+.success-checkmark .check-icon::before {
+	top: 3px;
+	left: -2px;
+	width: 30px;
+	transform-origin: 100% 50%;
+	border-radius: 100px 0 0 100px;
+}
+
+.success-checkmark .check-icon::after {
+	top: 0;
+	left: 30px;
+	width: 60px;
+	transform-origin: 0 50%;
+	border-radius: 0 100px 100px 0;
+	animation: rotate-circle 4.25s ease-in;
+}
+
+.success-checkmark .check-icon::before, .success-checkmark .check-icon::after {
+	content: '';
+	height: 100px;
+	position: absolute;
+	background: #FFFFFF;
+	transform: rotate(-45deg);
+}
+
+.success-checkmark .check-icon .icon-line {
+	height: 5px;
+	background-color: #f6e05e;
+	display: block;
+	border-radius: 2px;
+	position: absolute;
+	z-index: 10;
+}
+
+.success-checkmark .check-icon .icon-line.line-tip {
+	top: 46px;
+	left: 14px;
+	width: 25px;
+	transform: rotate(45deg);
+	animation: icon-line-tip 0.75s;
+}
+
+.success-checkmark .check-icon .icon-line.line-long {
+	top: 38px;
+	right: 8px;
+	width: 47px;
+	transform: rotate(-45deg);
+	animation: icon-line-long 0.75s;
+}
+
+.success-checkmark .check-icon .icon-circle {
+	top: -4px;
+	left: -4px;
+	z-index: 10;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	position: absolute;
+	box-sizing: content-box;
+	border: 4px solid rgba(246, 224, 94, 0.5);
+}
+
+.success-checkmark .check-icon .icon-fix {
+	top: 8px;
+	width: 5px;
+	left: 26px;
+	z-index: 1;
+	height: 85px;
+	position: absolute;
+	transform: rotate(-45deg);
+	background-color: #FFFFFF;
+}
+
+@keyframes rotate-circle {
+	0% {
+		transform: rotate(-45deg);
+	}
+
+	5% {
+		transform: rotate(-45deg);
+	}
+
+	12% {
+		transform: rotate(-405deg);
+	}
+
+	100% {
+		transform: rotate(-405deg);
+	}
+
+}
+
+@keyframes icon-line-tip {
+	0% {
+		width: 0;
+		left: 1px;
+		top: 19px;
+	}
+
+	54% {
+		width: 0;
+		left: 1px;
+		top: 19px;
+	}
+
+	70% {
+		width: 50px;
+		left: -8px;
+		top: 37px;
+	}
+
+	84% {
+		width: 17px;
+		left: 21px;
+		top: 48px;
+	}
+
+	100% {
+		width: 25px;
+		left: 14px;
+		top: 45px;
+	}
+
+}
+
+@keyframes icon-line-long {
+	0% {
+		width: 0;
+		right: 46px;
+		top: 54px;
+	}
+
+	65% {
+		width: 0;
+		right: 46px;
+		top: 54px;
+	}
+
+	84% {
+		width: 55px;
+		right: 0px;
+		top: 35px;
+	}
+
+	100% {
+		width: 47px;
+		right: 8px;
+		top: 38px;
+	}
+
+}
+
+.lds-ripple {
+	position: relative;
+	width: 80px;
+	height: 80px;
+}
+
+.lds-ripple div {
+	position: absolute;
+	border: 4px solid #f6e05e;
+	opacity: 1;
+	border-radius: 50%;
+	animation: lds-ripple 1.5s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds-ripple div:nth-child(2) {
+	animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+	0% {
+		top: 28px;
+		left: 28px;
+		width: 0;
+		height: 0;
+		opacity: 1;
+	}
+
+	100% {
+		top: -1px;
+		left: -1px;
+		width: 58px;
+		height: 58px;
+		opacity: 0;
+	}
+
 }
