feat: speakers, talks and agenda

--- a/indiaos/templates/conference.html
+++ b/indiaos/templates/conference.html
@@ -42,8 +42,8 @@
 
 	<!-- End of Meta Tags-->
 	<link href="/assets/css/indiaos.css" rel="stylesheet">
-	<!-- <link href="/assets/indiaos/css/tailwind.css" rel="stylesheet"> -->
-	<!-- <link href="/assets/indiaos/css/custom.css" rel="stylesheet"> -->
+	<link href="/assets/indiaos/css/tailwind.css" rel="stylesheet">
+	<link href="/assets/indiaos/css/custom.css" rel="stylesheet">
 	<link rel="canonical" href="{{ frappe.utils.get_url() }}" />
 
 	<!-- favicons-->
@@ -62,7 +62,7 @@
 	<meta name="theme-color" content="#000">
 	<link rel="shortcut icon" href="/assets/indiaos/img/icons/favicon.ico">
 
-	<!-- End -->	
+	<!-- End -->
 	<script>
 		window.frappe = {};
 		frappe.ready_events = [];
