--- a/indiaos/public/css/builds/tailwind.css
+++ b/indiaos/public/css/builds/tailwind.css
@@ -594,6 +594,10 @@ img {
   border-top-right-radius: 0.5rem;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
 .border-8 {
   border-width: 8px;
 }
@@ -690,8 +694,16 @@ img {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .h-10 {
@@ -708,6 +720,10 @@ img {
 
 .h-48 {
   height: 12rem;
+}
+
+.h-64 {
+  height: 16rem;
 }
 
 .leading-tight {
@@ -843,6 +859,10 @@ img {
   margin-bottom: 8rem;
 }
 
+.-mt-12 {
+  margin-top: -3rem;
+}
+
 .focus\:outline-none:focus {
   outline: 0;
 }
@@ -930,6 +950,10 @@ img {
   padding-top: 1.25rem;
 }
 
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
 .pr-12 {
   padding-right: 3rem;
 }
@@ -973,8 +997,16 @@ img {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .text-black {
   color: #000;
+}
+
+.text-gray-400 {
+  color: #cbd5e0;
 }
 
 .text-gray-500 {
@@ -987,6 +1019,10 @@ img {
 
 .text-gray-700 {
   color: #4a5568;
+}
+
+.text-gray-800 {
+  color: #2d3748;
 }
 
 .text-gray-900 {
@@ -1003,6 +1039,10 @@ img {
 
 .text-blue-900 {
   color: #2a4365;
+}
+
+.hover\:text-gray-800:hover {
+  color: #2d3748;
 }
 
 .text-xs {
@@ -1053,6 +1093,10 @@ img {
   letter-spacing: 0.1em;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
 .w-24 {
   width: 6rem;
 }
@@ -1065,8 +1109,28 @@ img {
   width: 12rem;
 }
 
+.w-64 {
+  width: 16rem;
+}
+
 .w-1\/2 {
   width: 50%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-1\/5 {
