fix: footer link

--- a/indiaos/templates/includes/footer.html
+++ b/indiaos/templates/includes/footer.html
@@ -7,7 +7,7 @@
 		<a href="/code-of-conduct" class="uppercase mt-4 text-center text-sm text-gray-500 md:w-1/5 w-1/2">Code of Conduct</a>
 		<a href="javascript:openModal()" class="uppercase mt-4 text-center text-sm text-gray-500 md:w-1/5 w-1/2">Register</a>
 		<a href="/propose-a-talk" class="uppercase mt-4 text-center text-sm text-gray-500 md:w-1/5 w-1/2">Propose a Talk</a>
-		<a href="/agenda"class="uppercase mt-4 text-center text-sm text-gray-500 md:w-1/5 w-1/2">Contact Us</a>
+		<a href="mailto:shivam@frappe.io"class="uppercase mt-4 text-center text-sm text-gray-500 md:w-1/5 w-1/2">Contact Us</a>
 	</div>
 
 	<div>
