--- a/indiaos/indiaos/doctype/conference_agenda/templates/conference_agenda.html
+++ b/indiaos/indiaos/doctype/conference_agenda/templates/conference_agenda.html
@@ -3,8 +3,29 @@
 {% block title %}IndiaOS 2020 - An Open Source Conference{% endblock %}
 
 {% block meta %}
-<meta name="title" content="IndiaOS 2020">
-<meta name="description" content="See what's shaping the future of software, Join a community connected by code and turn ideas into innovations.">
+<meta itemprop="name" content="IndiaOS - 2020">
+<meta name="title" content="Agenda - IndiaOS 2020">
+<meta name="description" content="IndiaOS is an attempt to bring this community together, so we can learn and inspire each other. To take this community forward in new directions that we have not yet imagined.">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@indiaos">
+<meta name="twitter:title" content="Agenda - IndiaOS 2020">
+<meta name="twitter:description" content="IndiaOS is an attempt to bring this community together, so we can learn and inspire each other. To take this community forward in new directions that we have not yet imagined.">
+<meta name="twitter:creator" content="@indiaos">
+<meta name="twitter:card" content="summary_large_image">
+
+<!-- Twitter summary card with large image must be at least 280x150px -->
+<meta name="twitter:image:src" content="{{ frappe.utils.get_url() }}/assets/indiaos/img/social/banner.png">
+
+<!-- Open Graph data -->
+<meta property="og:title" content="Agenda - IndiaOS 2020" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="{{ frappe.utils.get_url() }}" />
+<meta property="og:image" content="{{ frappe.utils.get_url() }}/assets/indiaos/img/social/banner.png" />
+<meta property="og:image:width" content="1360" />
+<meta property="og:image:height" content="720" />
+<meta property="og:description" content="IndiaOS is an attempt to bring this community together, so we can learn and inspire each other. To take this community forward in new directions that we have not yet imagined." />
+<meta property="og:site_name" content="IndiaOS - 2020" />
 {% endblock %}
 
 {% block body %}
