refactor: update address

--- a/indiaos/templates/emails/ticket.html
+++ b/indiaos/templates/emails/ticket.html
@@ -38,7 +38,7 @@ h1, h2, h3, p, div, span {
 }
 
 .ticket_preheading p {
-	margin-top: 1em; 
+	margin-top: 1em;
 	color: #4A5568;
 	line-height: 1.625;
 }
@@ -119,10 +119,10 @@ h1, h2, h3, p, div, span {
 	<div class="ticket__body">
 		<section class="ticket__section">
 			<div class="heading">Venue</div>
-			<span>Zerodha Sales Office
-			<br>#175/176, Next to Rainbow Hospital
-			<br>Bannergatta Road, Bilekahalli
-			<br>Bengaluru - 560076</span>
+			<span>Zerodha Head Office
+			<br>#153/154, 4th Cross, J.P Nagar 4th Phase
+			<br>Opp. Clarence Public School
+			<br>Bengaluru - 560078</span>
 		</section>
 		<div class="break"></div>
 		<section class="ticket__section">
