--- a/indiaos/templates/conference.html
+++ b/indiaos/templates/conference.html
@@ -49,6 +49,14 @@
 	<link href="/assets/indiaos/css/custom.css" rel="stylesheet"> -->
 	<link rel="canonical" href="{{ frappe.utils.get_url() }}" />
 
+	<style>
+		@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500,600,700&display=swap');
+
+		html {
+			font-family: 'IBM Plex Sans', sans-serif;
+		}
+	</style>
+
 	<!-- favicons-->
 	<link rel="apple-touch-icon" sizes="57x57" href="/assets/indiaos/img/icons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/assets/indiaos/img/icons/apple-icon-60x60.png">
