--- a/indiaos/templates/includes/navbar.html
+++ b/indiaos/templates/includes/navbar.html
@@ -22,11 +22,11 @@
 				</a>
 			</div>
 			{% endif %}
-			<div class="py-3 ml-2 lg:py-0 lg:ml-0 text-left">
+<!-- 			<div class="py-3 ml-2 lg:py-0 lg:ml-0 text-left">
 				<a href="/propose-a-talk" class="block font-base font-mono no-underline text-grey-darkest mr-0 lg:mr-8">
 					Propose a Talk
 				</a>
-			</div>
+			</div> -->
 			<div class="py-3 lg:py-0 text-left">
 				<button onclick="openModal()" href="#responsive-header" class="block font-base font-mono no-underline text-grey-darkest bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600">
 					Register
